deploy/eks-entra/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: deephaven-entra
  labels:
    app.kubernetes.io/part-of: deephaven-oidc
